--- a/SoraStream/ci.yml
+++ b/SoraStream/ci.yml
@@ -1,45 +1,41 @@
 name: Build
 
 # https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#concurrency
-concurrency: 
+concurrency:
   group: "build"
   cancel-in-progress: true
 
 on:
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
   push:
     branches:
+      # choose your default branch
       - master
       - main
     paths-ignore:
       - '*.md'
 
-permissions: write-all
-
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: env
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
         with:
           path: "src"
 
       - name: Checkout builds
-        uses: actions/checkout@master
+        uses: actions/checkout@v4
         with:
           ref: "builds"
           path: "builds"
-      
+
       - name: Clean old builds
-        run: rm $GITHUB_WORKSPACE/builds/*.cs3
+        run: rm $GITHUB_WORKSPACE/builds/*.cs3 || true
 
       - name: Setup JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
+          distribution: "adopt"
           java-version: 11
 
       - name: Setup Android SDK
@@ -52,6 +48,11 @@ jobs:
           DUMP_KEY: ${{ secrets.DUMP_KEY }}
           CRUNCHYROLL_BASIC_TOKEN: ${{ secrets.CRUNCHYROLL_BASIC_TOKEN }}
           CRUNCHYROLL_REFRESH_TOKEN: ${{ secrets.CRUNCHYROLL_REFRESH_TOKEN }}
+          ANICHI_API: ${{ secrets.ANICHI_API }}
+          ANICHI_SERVER: ${{ secrets.ANICHI_SERVER }}
+          ANICHI_ENDPOINT: ${{ secrets.ANICHI_ENDPOINT }}
+          ANICHI_APP: ${{ secrets.ANICHI_APP }}
+          ZSHOW_API: ${{ secrets.ZSHOW_API }}
           SFMOVIES_API: ${{ secrets.SFMOVIES_API }}
           CINEMATV_API: ${{ secrets.CINEMATV_API }}
           GHOSTX_API: ${{ secrets.GHOSTX_API }}
@@ -66,6 +67,11 @@ jobs:
           echo DUMP_KEY=$DUMP_KEY >> local.properties
           echo CRUNCHYROLL_BASIC_TOKEN=$CRUNCHYROLL_BASIC_TOKEN >> local.properties
           echo CRUNCHYROLL_REFRESH_TOKEN=$CRUNCHYROLL_REFRESH_TOKEN >> local.properties
+          echo ANICHI_API=$ANICHI_API >> local.properties
+          echo ANICHI_SERVER=$ANICHI_SERVER >> local.properties
+          echo ANICHI_ENDPOINT=$ANICHI_ENDPOINT >> local.properties
+          echo ANICHI_APP=$ANICHI_APP >> local.properties
+          echo ZSHOW_API=$ZSHOW_API >> local.properties
           echo SFMOVIES_API=$SFMOVIES_API >> local.properties
           echo CINEMATV_API=$CINEMATV_API >> local.properties
           echo GHOSTX_API=$GHOSTX_API >> local.properties
@@ -81,6 +87,11 @@ jobs:
           ./gradlew make makePluginsJson
           cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
           cp build/plugins.json $GITHUB_WORKSPACE/builds
+
+      - name: Move Kuramanime
+        run: |
+          rm $GITHUB_WORKSPACE/builds/KuramanimeProvider.cs3 || true
+          cp $GITHUB_WORKSPACE/builds/stored/KuramanimeProvider.cs3 $GITHUB_WORKSPACE/builds
 
       - name: Push builds
         run: |
